🎉 feat(manifest.json): Add Chrome extension manifest file 🐛 fix(package.json): Update devDependency for '@crxjs/vite-plugin' 🗑️ remove(public/manifest.json): Delete unnecessary manifest file 🐛 fix(vite.config.ts): Import and use 'crx' plugin for manifest generation

--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,9 @@
     "default_popup": "index.html"
   },
   "permissions": ["scripting"],
+  "background": {
+    "service_worker": "src/background/background.ts",
+    "type": "module"
+  },
   "host_permissions": ["https://*/*", "http://*/*"]
 }
