--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,21 @@
 {
   "manifest_version": 3,
-  "name": "My Chrome Extension",
+  "name": "Professional Extension",
   "version": "1.0.0",
-  "description": "Description of your extension",
+  "description": "A professional Chrome extension with Shadcn UI",
+  "permissions": ["storage", "tabs", "activeTab", "notifications"],
+  "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "index.html"
   },
-  "permissions": ["scripting"],
   "background": {
-    "service_worker": "src/background/background.ts",
+    "service_worker": "src/background/index.ts",
     "type": "module"
   },
-  "host_permissions": ["https://*/*", "http://*/*"]
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["src/content/index.ts"]
+    }
+  ]
 }
